misc. and forcing connection

--- a/.env.sample
+++ b/.env.sample
@@ -1,18 +1,2 @@
-FIRST_MNEMONIC="alley afraid soup fall idea toss can goose become valve initial strong forward bright dish figure check leopard decide warfare hub unusual join cart"
-FIRST_ENDPOINT="http://localhost:26657"
-FIRST_CHAIN_ID="test-1"
-FIRST_TOKEN="untrn"
-FIRST_PREFIX="neutron"
-
-SECOND_MNEMONIC="record gift you once hip style during joke field prize dust unique length more pencil transfer quit train device arrive energy sort steak upset"
-SECOND_ENDPOINT="http://localhost:36657"
-SECOND_CHAIN_ID="test-2"
-SECOND_TOKEN="untrn"
-SECOND_PREFIX="neutron"
-
-
-PUBLIC_DEFAULT_CHAIN_ID = "pion-1"
-PUBLIC_RELAYING_MNEMONIC = "record gift you once hip style during joke field prize dust unique length more pencil transfer quit train device arrive energy sort steak upset"
-
-PUBLIC_DEFAULT_CHAIN_REST = "http://localhost:1337"
-PUBLIC_DEFAULT_CHAIN_RPC = "http://localhost:26657
+PUBLIC_WALLETCONNECT_ID=""
+PUBLIC_RELAYING_MNEMONIC=""
